Fix message identified only by "message id" & more docs
