# server/src/main/java/com/szampchat/server/channel/ChannelController.java
@@ -4,7 +4,9 @@ import com.szampchat.server.auth.CurrentUser;
 import com.szampchat.server.channel.dto.ChannelCreateDTO;
 import com.szampchat.server.channel.dto.ChannelDTO;
 import com.szampchat.server.channel.entity.Channel;
-import com.szampchat.server.community.service.CommunityMemberService;
+import com.szampchat.server.shared.docs.OperationDocs;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.repository.query.Param;
@@ -13,26 +15,44 @@ import org.springframework.web.bind.annotation.*;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import static com.szampchat.server.shared.docs.DocsProperties.*;
+import static com.szampchat.server.shared.docs.DocsProperties.RESPONSE_401;
+
 @AllArgsConstructor
 @RestController
 public class ChannelController {
     private final ChannelService channelService;
-    private final ModelMapper modelMapper;
 
-    @GetMapping("/communities/{communityId}/channels")
-    @PreAuthorize("@communityMemberService.isMember(#communityId, #currentUser.userId)")
-    public Flux<ChannelDTO> getChannelsForCommunity(@PathVariable Long communityId, CurrentUser currentUser) {
-        return channelService.findChannelsForCommunity(communityId)
-                .map(channel -> modelMapper.map(channel, ChannelDTO.class));
-    }
 
-    // broken
-    @PostMapping("/channels")
-    //@PreAuthorize("@communityMemberService.isMember(#channelCreateDTO.communityId, #currentUser.userId)")
+    //This endpoint is redundant as this data is sent with communities/:communityId/info
+//    @ApiResponse(responseCode = "200")
+//    @OperationDocs({RESPONSE_419, REQUIRES_MEMBER_PERMISSION, DOCUMENT_PATH_VARIABLES, RESPONSE_401})
+//    @Operation(summary = "Get community channels")
+//
+//    @GetMapping("/communities/{communityId}/channels")
+//    @PreAuthorize("@communityMemberService.isMember(#communityId, #currentUser.userId)")
+//    public Flux<ChannelDTO> getChannelsForCommunity(@PathVariable Long communityId, CurrentUser currentUser) {
+//        return channelService.findChannelsForCommunity(communityId)
+//                .map(channel -> modelMapper.map(channel, ChannelDTO.class));
+//    }
+
+    //TODO broken
     //TODO Check if user has permission to create channels in community
-    public Mono<Channel> createChannel(@RequestBody ChannelCreateDTO channelCreateDTO, CurrentUser currentUser) {
+
+    @ApiResponse(responseCode = "201")
+    @OperationDocs({RESPONSE_419, REQUIRES_MEMBER_PERMISSION, DOCUMENT_PATH_VARIABLES, RESPONSE_401})
+    @Operation(summary = "Create channel")
+
+    @PostMapping("/channels")
+    //@PreAuthorize("@communityMemberService.isMember(#channelCreateDTO.communityId, #currentUser.userId)") //TODO why is this commented?
+    public Mono<Channel> createChannel(@RequestBody ChannelCreateDTO channelCreateDTO) {
         return channelService.createChannel(channelCreateDTO);
     }
+
+
+    @ApiResponse(responseCode = "204")
+    @OperationDocs({RESPONSE_419, REQUIRES_PARTICIPANT_PERMISSION, DOCUMENT_PATH_VARIABLES, RESPONSE_401})
+    @Operation(summary = "Edit channel")
 
     @PutMapping("/channels/{channelId}")
     //@PreAuthorize("@channelService.isParticipant(#channelId, #currentUser.userId)")
@@ -40,6 +60,11 @@ public class ChannelController {
     public Mono<Channel> editChannel(@PathVariable("channelId") Long channelId, @RequestBody Channel channel, @Param("currentUser") CurrentUser currentUser) {
         return channelService.editChannel(channelId, channel);
     }
+
+
+    @ApiResponse(responseCode = "204")
+    @OperationDocs({RESPONSE_419, REQUIRES_PARTICIPANT_PERMISSION, DOCUMENT_PATH_VARIABLES, RESPONSE_401})
+    @Operation(summary = "Delete channel")
 
     @DeleteMapping("/channels/{channelId}")
     @PreAuthorize("@channelService.isParticipant(#channelId, #currentUser.userId)")
