# server/src/main/java/com/szampchat/server/shared/docs/customizers/OperationDocsCustomizer.java
@@ -32,6 +32,10 @@ public class OperationDocsCustomizer implements OperationCustomizer {
                         apiResponses.addApiResponse("403",
                                 new ApiResponse().description("User is not a member of community or resource is not available")
                         );
+                case DocsProperties.REQUIRES_PARTICIPANT_PERMISSION ->
+                        apiResponses.addApiResponse("403",
+                                new ApiResponse().description("User is not a member of channel's community or resource is not available")
+                        );
                 case DocsProperties.REQUIRES_NOT_MEMBER_PERMISSION ->
                         apiResponses.addApiResponse("403",
                                 new ApiResponse().description("User is already a member of community or resource is not available")
